--- a/sass/_basic.scss
+++ b/sass/_basic.scss
@@ -188,6 +188,7 @@ img {
   padding: 1em;
   min-width: 120px;
   border: 2px solid $font-colour;
+  border-radius: 5px;
   margin: 1em 0 0;
   cursor: inherit;
   @extend .transition;
