--- a/sass/_single.scss
+++ b/sass/_single.scss
@@ -189,6 +189,8 @@ body.single {
   visibility: hidden;
   opacity: 0;
   transition: all 650ms ease-in-out;
+
+  border-radius: 0 20px 20px 0;
 }
 
 .float--right {
@@ -203,6 +205,8 @@ body.single {
   visibility: hidden;
   opacity: 0;
   transition: all 650ms ease-in-out;
+
+  border-radius: 20px 0 0 20px;
 }
 
 @media (max-width: 740px) {
